fix: payments on web insert rather than update the table. Sending enough info to actually insert on the table
